--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Proyecto Git y GitHub</h1>
-        <p>a ver q pasa</p>
+    <h2>subtitulo</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus harum quae autem cumque fugiat molestias aperiam soluta sint labore unde minima ut, nisi iure sunt eveniet. Atque odit enim tenetur.
+
+        </p>
+        <img src="img/libros con texto.jpg" alt="">
+      
 </body>
 </html>
